--- a/themes/hugo_robust/layouts/partials/single_json_ld.html
+++ b/themes/hugo_robust/layouts/partials/single_json_ld.html
@@ -29,6 +29,6 @@
         "height": 60
       }
     },
-    "description": "{{ .Description | default .Summary }}"
+    "description": "{{ replaceRE "\n" " " (.Description | default .Summary) }}"
   }
 </script>
