--- a/themes/hugo_robust/layouts/partials/styles.css
+++ b/themes/hugo_robust/layouts/partials/styles.css
@@ -270,6 +270,14 @@ article.sn {
   margin-bottom: 1rem;
 }
 
+.anchor:before { 
+  display: block; 
+  content: " "; 
+  height: 100px;
+  margin-top: -100px;
+  visibility: hidden; 
+}
+
 article.sn .thumb {
   height: 20rem;
 }
