Add h1 title to main page!

--- a/themes/hugo_robust/layouts/_default/baseof.html
+++ b/themes/hugo_robust/layouts/_default/baseof.html
@@ -31,7 +31,13 @@
     <header class="l-header">
       <div class="l-container">
         <div class="logo">
-            <a href="{{ substr .Site.BaseURL 0 -1 }}{{ .Site.LanguagePrefix }}/">{{ .Site.Title }}</a>
+            {{ if eq .Title $.Site.Title }}
+            <h1>
+            {{ end }}
+              <a href="{{ substr .Site.BaseURL 0 -1 }}{{ .Site.LanguagePrefix }}/">{{ .Site.Title }}</a>
+            {{ if eq .Title $.Site.Title }}
+            </h1>
+            {{ end }}
         </div>
 
         <div id="language-selector" class="topNav">
