--- a/themes/hugo_robust/layouts/shortcodes/img.html
+++ b/themes/hugo_robust/layouts/shortcodes/img.html
@@ -1,12 +1,15 @@
-<figure{{ if .Get "class" }} class="{{ .Get "class" }}"{{ end }}>
-  <img src="{{ $.Site.BaseURL }}{{ .Get "src" }}" alt="{{ .Get "caption" }}" {{ if .Get "width"}} width="{{ .Get "width" }}" {{ end }} {{ if .Get "height"}} height="{{ .Get "height" }}" {{ end }}>
+<picture>
+  <figure{{ if .Get "class" }} class="{{ .Get "class" }}"{{ end }}>
+  <img src="{{ $.Site.BaseURL }}{{ .Get "src" }}" alt="{{ .Get "caption" }}" {{ if .Get "width"}} width="{{ .Get "width" }}" {{ end }} {{ if .Get "height"}} height="{{ .Get "height" }}" {{ end }} srcset="{{ $.Site.BaseURL }}{{ .Get "src" }}-medium, {{ $.Site.BaseURL }}{{ .Get "src" }}-large,{{ $.Site.BaseURL }}{{ .Get "src" }}-extralarge">
   {{ if .Get "caption" }}
   <figcaption>
     {{ if .Get "href" }}
     <a href="{{ .Get "href" }}" target="_blank">{{ .Get "caption" }}</a>
     {{ else }}
+    {{ $image_type_arr := split (.Get "src") "." }}
     {{ .Get "caption" }}
     {{ end }}
   </figcaption>
   {{ end }}
 </figure>
+</picture>
