Host instagram logo in own server

--- a/themes/hugo_robust/layouts/partials/custom.css
+++ b/themes/hugo_robust/layouts/partials/custom.css
@@ -55,12 +55,12 @@ div.fb-follow{
   margin-top:2px;
   width: 32px;
   height: 32px;
-  background: url(//badges.instagram.com/static/images/ig-badge-sprite-32.png) no-repeat 0 0;
+  background: url(/images/ig-badge-sprite-32.png) no-repeat 0 0;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
   .ig-b-32 {
-    background-image: url(//badges.instagram.com/static/images/ig-badge-sprite-32@2x.png);
+    background-image: url(/images/ig-badge-sprite-32@2x.png);
     background-size:60px 178px;
   }
 }
