--- a/themes/hugo_robust/layouts/shortcodes/img.html
+++ b/themes/hugo_robust/layouts/shortcodes/img.html
@@ -1,15 +1,41 @@
+{{ if ne (getenv "HUGO_ENV") "DEV" }}
+
 <picture>
   <figure{{ if .Get "class" }} class="{{ .Get "class" }}"{{ end }}>
-  <img src="{{ $.Site.BaseURL }}{{ .Get "src" }}" alt="{{ .Get "caption" }}" {{ if .Get "width"}} width="{{ .Get "width" }}" {{ end }} {{ if .Get "height"}} height="{{ .Get "height" }}" {{ end }} srcset="{{ $.Site.BaseURL }}{{ .Get "src" }}-medium, {{ $.Site.BaseURL }}{{ .Get "src" }}-large,{{ $.Site.BaseURL }}{{ .Get "src" }}-extralarge">
-  {{ if .Get "caption" }}
+  <source srcset="{{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-extralarge.jpg, {{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-extralarge@2x.jpg 2x" media="(min-width: 1600px)"><!-- From 1600px to bigger -->
+  <source srcset="{{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-large.jpg, {{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-large@2x.jpg 2x" media="(max-width: 1600px)"><!-- From 800px to 1600px -->
+  <source srcset="{{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-medium.jpg, {{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-medium@2x.jpg 2x" media="(max-width: 800px)"><!-- Up to 800px -->
+  <img src="{{ $.Site.BaseURL }}images/{{ .Get "src" }}" alt="{{ .Get "caption" }}">
+  {{- if .Get "caption" -}}
   <figcaption>
-    {{ if .Get "href" }}
-    <a href="{{ .Get "href" }}" target="_blank">{{ .Get "caption" }}</a>
+    {{- if .Get "href" -}}
+    <a href="{{ .Get "href" }}" target="_blank">{{- .Get "caption" -}}</a>
     {{ else }}
-    {{ $image_type_arr := split (.Get "src") "." }}
-    {{ .Get "caption" }}
-    {{ end }}
+    {{- $image_type_arr := split (.Get "src") "." -}}
+    {{- .Get "caption" -}}
+    {{- end -}}
   </figcaption>
-  {{ end }}
+  {{- end -}}
 </figure>
 </picture>
+
+{{ else }}
+
+<figure{{ if .Get "class" }} class="{{ .Get "class" }}"{{ end }}>
+  <img src="{{ $.Site.BaseURL }}/images/{{ .Get "src" }}" alt="{{ .Get "caption" }}" {{ if .Get "width"}} width="{{ .Get "width" }}" {{ end }} {{ if .Get "height"}} height="{{ .Get "height" }}" {{ end }}>
+  {{ if .Get "caption" }}
+  <figcaption>
+    {{- if .Get "href" -}}
+    <a href="{{ .Get "href" }}" target="_blank">{{- .Get "caption" -}}</a>
+    {{- else -}}
+    {{- $image_type_arr := split (.Get "src") "." -}}
+    {{- .Get "caption" -}}
+    {{- end -}}
+  </figcaption>
+  {{- end -}}
+</figure>
+
+{{ end }}
+
+
+
