--- a/themes/hugo_robust/layouts/partials/styles.css
+++ b/themes/hugo_robust/layouts/partials/styles.css
@@ -472,6 +472,32 @@ article.sn > .article-body figure amp-img {
   max-width: 100%;
 }
 
+article.sn > .article-body a img {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
+article.sn > .article-body a img.preview {    
+  filter: blur(1vw);
+  transform: scale(0.95);
+}
+
+article.sn > .article-body a img.reveal {
+   will-change: transform, opacity;
+   animation: reveal 1s ease-out;
+}
+
+a.progressive img:not(.reveal).not:(.preview){
+  display: none;
+}
+
+@keyframes reveal{
+  0%{ transform: scale(0.95); opacity: 0;}
+  100%{ transform: scale(1); opacity: 1;}
+}
+
+
 article.sn > .article-body figcaption {
   color: #69b6fb;
   font-size: .8rem;
