--- a/themes/hugo_robust/layouts/shortcodes/img.html
+++ b/themes/hugo_robust/layouts/shortcodes/img.html
@@ -1,24 +1,23 @@
-<a href="{{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-medium.jpg" class="progressive replace">
-  <img src="{{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-micro.jpg"  alt="{{ .Get "caption" }}" class="preview">
-</a>
+
+{{ $imgWithoutExtension := delimit (slice ($.Site.BaseURL) "images/generated/" (substr (.Get "src")  0 -4)) "" }}
+{{ $imgFull := delimit (slice ($.Site.BaseURL) "images/" (.Get "src")) "" }}
 
 
-<!-- former method -->
+{{ $.Scratch.Set "imgFirst" (delimit (slice $imgWithoutExtension "-micro.jpg") "")  }}
+{{ if .Get "imgFirst" }}
+  {{ $.Scratch.Set "imgFirst" (.Get "imgFirst") }}
+{{ end }}
 
-<!-- 
- <picture>
-    <figure {{ if .Get "class" }} class="{{ .Get "class" }}"{{ end }}>
-    <source srcset="{{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-extralarge.jpg, {{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-extralarge@2x.jpg 2x" media="(min-width: 1600px)"> -->
-      <!-- From 1600px to bigger -->
-<!-- 
-    <source srcset="{{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-large.jpg, {{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-large@2x.jpg 2x" media="(max-width: 1600px)"> -->
-      <!-- From 800px to 1600px -->
-<!-- 
-    <source srcset="{{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-medium.jpg, {{ $.Site.BaseURL }}images/generated/{{ substr (.Get "src")  0 -4 }}-medium@2x.jpg 2x" media="(max-width: 800px)"> -->
-      <!-- Up to 800px -->
-<!-- 
-    <img src="{{ $.Site.BaseURL }}images/{{ .Get "src" }}" alt="{{ .Get "caption" }}">
-    {{- if .Get "caption" -}}
+{{ $imgFirst := $.Scratch.Get "imgFirst"}}
+
+
+
+<figure href="{{ $imgFull }}" class="progressive replace {{ if .Get "class" }} {{ .Get "class" }}{{ end }}" sizes="(max-width:768px) 92vw, 65vw" srcset="{{ $imgWithoutExtension }}-extralarge.jpg 1400w, {{ $imgWithoutExtension }}-large.jpg 800w, {{ $imgWithoutExtension }}-medium.jpg 500w, {{ $imgWithoutExtension }}-small.jpg 300w">
+  <div class="cssload-loader">
+    <div class="cssload-ball"></div>
+  </div>
+  <img src="{{ $imgFirst }}"  alt="{{ .Get "caption" }}" class="preview">    
+  {{- if .Get "caption" -}}
     <figcaption>
       {{- if .Get "href" -}}
       <a href="{{ .Get "href" }}" target="_blank">{{- .Get "caption" -}}</a>
@@ -27,7 +26,5 @@
       {{- .Get "caption" -}}
       {{- end -}}
     </figcaption>
-    {{- end -}}
-  </figure>
-  </picture>
-  -->
+  {{- end -}}
+</figure>
