--- a/themes/hugo_robust/layouts/_default/li.html
+++ b/themes/hugo_robust/layouts/_default/li.html
@@ -3,7 +3,7 @@
     <div class="thumb thumb-{{ .UniqueID }}"></div>
 
     <div class="inner">
-      <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05JST" }}">{{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}</time>
+      <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05" }}">{{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}</time>
 
       <h2 class="title">{{ .Title }}</h2>
       <div class="summary">{{ replaceRE "\n" "" (.Description | default .Summary) }}</div>
