--- a/themes/hugo_robust/layouts/_default/summary.html
+++ b/themes/hugo_robust/layouts/_default/summary.html
@@ -1,12 +1,11 @@
 <article class="sn">
-
-  <div class="thumb thumb-{{ .UniqueID }}"></div>
+  <div class="thumb thumb-{{ .UniqueID }} bigger"></div>
 
   <header class="article-header">
     <h1 class="title">{{ .Title }}</h1>
 
     <ul class="facts">
-      <li><i class="fa fa-calendar" aria-hidden="true"></i><time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05JST" }}">{{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}</time></li>
+      <li><i class="fa fa-calendar" aria-hidden="true"></i><time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05" }}">{{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}</time></li>
       {{ with .Section }}<li><i class="fa fa-bookmark" aria-hidden="true"></i><a href="{{ $.Site.BaseURL }}{{ . | urlize }}/">{{ . | upper }}</a></li>{{ end }}
       {{ if eq (getenv "HUGO_ENV") "DEV" }}
       {{ if .IsDraft }}<li style="color: #2196f3;">DRAFT</li>{{ end }}
